# lyra-lang

./: Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  go.mod
backend/cmd/server/: main.go
backend/internal/auth/: handler.go  jwt.go  middleware.go
backend/internal/chat/: client.go  hub.go  protocol.go  room.go
backend/internal/database/: migrations.go  postgres.go
backend/internal/handlers/: health.go  messages.go  rooms.go  users.go
backend/internal/middleware/: cors.go  logging.go
backend/internal/models/: message.go  presence.go  room.go  user.go
backend/internal/redis/: client.go  presence.go  pubsub.go
examples/: adt.lyra  factorial.lyra  hello.lyra  interpolation.lyra  pipes.lyra  records.lyra  showcase.lyra  vm_bench.lyra
examples/modules/: main.lyra  math_utils.lyra
frontend/: nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  messages.ts  rooms.ts
frontend/src/context/: AuthContext.tsx  ChatContext.tsx
src/: error.rs  lib.rs  main.rs  span.rs
src/ast/: mod.rs  pretty.rs
src/compiler/: bytecode.rs  locals.rs  mod.rs
src/eval/: builtins.rs  env.rs  mod.rs  pattern.rs  value.rs
src/lexer/: mod.rs  token.rs
src/parser/: decl.rs  expr.rs  mod.rs  pattern.rs  types.rs
src/repl/: highlighter.rs  mod.rs
src/stdlib/: mod.rs
src/types/: env.rs  exhaustiveness.rs  infer.rs  mod.rs  subst.rs  unify.rs
src/vm/: frame.rs  mod.rs
tests/: integration_tests.rs  lexer_tests.rs  parser_tests.rs  type_tests.rs  vm_tests.rs
(+23 files in other folders)
